<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dp" >

    <Button
        android:id="@+id/gl_choose_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/choose_image"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DAD9DB" />

    <Button
        android:id="@+id/gl_choose_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_camera_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/choose_photo"
        android:textSize="16sp" />

    <Button
        android:id="@+id/gl_choose_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_cancel_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/choos_cancel"
        android:textSize="16sp" />

</LinearLayout>